# PCI-CoronaryTools-App

./: .gitignore  README.md
Application/: CMakeLists.txt  packages.config
Application/Algorithms/: CMakeLists.txt  IThreadPool.h
Application/Algorithms/BxLib/: CMakeLists.txt
Application/Algorithms/CbdLib/: CMakeLists.txt
Application/Algorithms/DiaLib/: CMakeLists.txt
Application/Algorithms/ErrLib/: CMakeLists.txt
Application/Algorithms/MkxLib/: CMakeLists.txt
Application/Algorithms/OscLib/: CMakeLists.txt
Application/Algorithms/PrmLib/: CMakeLists.txt  PrmLib.def
Application/Algorithms/RdgLib/: CMakeLists.txt
Application/Algorithms/SwLib/: CMakeLists.txt
Application/Core/: CMakeLists.txt
Application/Core/Core.Archiving.ModuleTest/: CMakeLists.txt
Application/Core/Core.StentBoost.ModuleTest/: stb_sample_run.boost.crc  stb_sample_run.live.crc
Application/Core/FlexLM/: CMakeLists.txt  LicenseCheck.cpp  LicenseCheck.h
Application/Core/Localization/: CMakeLists.txt  Translation.cpp
Application/Core/Resources/: eula_stentboost_live.string
Application/Core/StenboostAlgo/: CMakeLists.txt
Application/Core/UnitTest.Roadmap/: crm.ini
Application/Core/UnitTest.StentboostAlgo/: frangiRawFloatImage.raw
Application/Core/include/: AboutInfo.h  AlluraColors.h  AlluraCoregUi.ui.h  AlluraEpxSelection.ui.h  AlluraGuidance.ui.h  AlluraIfrReviewPanel.ui.h  AlluraSeparator.h  AlluraTopGuidanceStandard.ui.h  AlluraTopGuidanceStbContrast.ui.h  ApplicationType.h  ArchivingSettings.h  ButtonTransparent.h  CoRegParameters.h  CoRegistrationAdministration.h  CoRegistrationControl.h  CoRegistrationGuidanceState.h  CoRegistrationState.h  ConnectionSettings.h  CoregUiAdapter.h  CrmAdministration.h  CrmAlgoAngio.h  CrmAlgoFluoro.h  CrmApcController.h  CrmApcGuidanceState.h  CrmCreationGuidanceState.h  CrmErrorGuidanceState.h  CrmErrors.h  CrmGuidanceBaseState.h  CrmMovieGrabber.h  CrmOverlay.h  CrmOverlayState.h  CrmParameters.h  CrmPictorialItem.h  CrmPictorialListControl.h  CrmProcessingAngioState.h  CrmRecording.h  CrmRepository.h  CrmRoadmap.h  CrmRoadmapActive.h  CrmRoadmapSelectViewer.h  (+150 more)
Application/Core/src/: AboutInfo.cpp  AlluraSeparator.cpp  ArchivingSettings.cpp  ButtonTransparent.cpp  CoRegParameters.cpp  CoRegistrationAdministration.cpp  CoRegistrationControl.cpp  CoRegistrationGuidanceState.cpp  CoRegistrationState.cpp  ConnectionSettings.cpp  CoregUiAdapter.cpp  CrmAdministration.cpp  CrmAlgoAngio.cpp  CrmAlgoFluoro.cpp  CrmApcController.cpp  CrmApcGuidanceState.cpp  CrmCreationGuidanceState.cpp  CrmErrorGuidanceState.cpp  CrmErrors.cpp  CrmGuidanceBaseState.cpp  CrmMovieGrabber.cpp  CrmOverlay.cpp  CrmOverlayState.cpp  CrmParameters.cpp  CrmPictorialItem.cpp  CrmPictorialListControl.cpp  CrmProcessingAngioState.cpp  CrmRecording.cpp  CrmRepository.cpp  CrmRoadmap.cpp  CrmRoadmapActive.cpp  CrmRoadmapSelectViewer.cpp  CrmTableGuidanceState.cpp  CrmThumbnail.cpp  CrmTsmPage.cpp  CrmViewer.cpp  FmTrendDisplay.cpp  FrameGrabber.cpp  GraphDisplay.cpp  LicensesCollection.cpp  (+97 more)
Application/CrashRecovery/: CMakeLists.txt  main.cpp
Application/PciApp/: CMakeLists.txt  LicenseManager.cpp  Main.cpp  NetworkIP.cpp  Resources.cpp  WindowKeyHandler.cpp  settings.ini
Application/PciApp/include/: LicenseManager.h  NetworkIP.h  Resources.h  SccfLogDefs.h  WindowKeyHandler.h
Application/Resource/Configuration/: Workstation.ini  releaseinfo.txt  settings.ini
Application/cmake/: AddGoogleTest.cmake
Common/: CMakeLists.txt
Common/AuditTrailInterface/: CMakeLists.txt
Common/AuditTrailInterface/include/: AuditSecurityOptions.h  AuditTrailClient.h  AuditTrailConstants.h  IAuditTrail.h  IAuditTrail.hpp
Common/AuditTrailInterface/src/: AuditTrailClient.cpp  IAuditTrail.cpp
Common/CommonPlatform.AppLauncherNative/: CMakeLists.txt
Common/CommonPlatform.AppLauncherNative/include/: AppLauncher.h  AppLauncherClient.h  AppLauncherConstants.h  Applications.h  IAppExitNotifier.hpp  IAppLauncher.hpp  IAppLauncherClient.h
Common/CommonPlatform.AppLauncherNative/src/: AppLauncher.cpp  AppLauncherClient.cpp
Common/CommonPlatform.Coregistration/: CMakeLists.txt
Common/CommonPlatform.Coregistration/include/: CoRegistrationError.h  CoRegistrationIfrPullbackCycle.h  CoRegistrationIfrSpotCycle.h  CoRegistrationOptions.h  CoRegistrationPdPaInfo.h  CoRegistrationPressureAndEcg.h  CoRegistrationProtocol.h  CoRegistrationServerState.h  CoRegistrationSource.h  CoRegistrationSpotMeasurement.h  CoRegistrationSystemInfo.h  ITcpClient.h  TcpClient.h  TimeStampValidator.h
Common/CommonPlatform.Coregistration/src/: CoRegistrationError.cpp  CoRegistrationIfrPullbackCycle.cpp  CoRegistrationIfrSpotCycle.cpp  CoRegistrationOptions.cpp  CoRegistrationPdPaInfo.cpp  CoRegistrationPressureAndEcg.cpp  CoRegistrationServerState.cpp  CoRegistrationSource.cpp  CoRegistrationSpotMeasurement.cpp  CoRegistrationSystemInfo.cpp  TcpClient.cpp  TimeStampValidator.cpp
Common/CommonPlatform.Dicom/: CMakeLists.txt
Common/CommonPlatform.Dicom/CharacterSetDetector/: charactersetdetector.cpp  charsetutility.cpp  detectorfactory.cpp  gb18030.cpp  isoir100.cpp  isoir13.cpp  isoir159.cpp  isoir192.cpp  isoir6.cpp  isoir87.cpp  stringutil.cpp  unicodeblock.cpp
Common/CommonPlatform.Dicom/Merge/: application.cpp  association.cpp  exception.cpp  file.cpp  item.cpp  library.cpp  message.cpp  messagebase.cpp  messagebaseimpl.cpp  proposedservicelist.cpp  secureassociation.cpp  service.cpp  syntaxlist.cpp  util.cpp
Common/CommonPlatform.Dicom/TLS/: applicationcontext.cpp  mergetlsadapter.cpp  schannelcontroller.cpp  socket.cpp  tlsutilities.cpp
Common/CommonPlatform.Dicom/include/: CharSetManagerSystemLanguage.h  Dicom.h  DicomConstants.h  UidUtils.h  charsetmanager.h  jpegencoder.h
Common/CommonPlatform.Logging/: CMakeLists.txt
Common/CommonPlatform.TSM/: CMakeLists.txt
Common/CommonPlatform.Utilities/: CMakeLists.txt
Common/CommonPlatform.Xray/: CMakeLists.txt
Common/iAcquisitionInterface/: CMakeLists.txt
Common/iControlInterface/: CMakeLists.txt
Common/iControlLib/: CMakeLists.txt
(+532 files in other folders)
